Add comprehensive HotSpot JVM documentation
Co-authored-by: janbodnar <16985640+janbodnar@users.noreply.github.com>